// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectTheme /> should render correctly 1`] = `
<div
  className=""
  id="testId"
>
  <Field
    aria-autocomplete="list"
    aria-controls="SelectTheme-filter-theme-listbox"
    aria-haspopup="true"
    clearable={false}
    component={[Function]}
    disabled={false}
    id="SelectTheme-filter-theme"
    label="global.theme"
    multi={false}
    name="theme"
    options={
      Array [
        Object {
          "label": "Mon premier thème",
          "value": "theme1",
        },
        Object {
          "label": "Mon second thème",
          "value": "theme2",
        },
      ]
    }
    placeholder="global.select_themes"
    role="combobox"
  />
</div>
`;

exports[`<SelectTheme /> should render disabled 1`] = `
<div
  className=""
  id="testId"
>
  <Field
    aria-autocomplete="list"
    aria-controls="SelectTheme-filter-theme-listbox"
    aria-haspopup="true"
    clearable={false}
    component={[Function]}
    disabled={true}
    id="SelectTheme-filter-theme"
    label="global.theme"
    multi={false}
    name="theme"
    options={
      Array [
        Object {
          "label": "Mon premier thème",
          "value": "theme1",
        },
        Object {
          "label": "Mon second thème",
          "value": "theme2",
        },
      ]
    }
    placeholder="global.select_themes"
    role="combobox"
  />
</div>
`;

exports[`<SelectTheme /> should render empty list 1`] = `
<div
  className=""
  id="myDivId"
>
  <Field
    aria-autocomplete="list"
    aria-controls="SelectTheme-filter-theme-listbox"
    aria-haspopup="true"
    clearable={true}
    component={[Function]}
    disabled={false}
    id="SelectTheme-filter-theme"
    label="global.theme"
    multi={true}
    name="themes"
    options={Array []}
    placeholder="global.select_themes"
    role="combobox"
  />
</div>
`;
